Add a basic test for FakeMediaProvider
There are currently no tests for this file. Also fix some lint warnings and remove
some dead code.

PiperOrigin-RevId: 755424007